--- a/base/docker-compose-base.yaml
+++ b/base/docker-compose-base.yaml
@@ -7,15 +7,15 @@ version: '2.1'
 
 services:
 
-  orderer0.banksco.com:
-    container_name: orderer0.banksco.com
+  ordererTF1.banksco.com:
+    container_name: ordererTF1.banksco.com
     image: hyperledger/fabric-orderer:2.2.0
     environment:
       - FABRIC_LOGGING_SPEC=info
       - ORDERER_GENERAL_LISTENADDRESS=0.0.0.0
       - ORDERER_GENERAL_GENESISMETHOD=file
-      - ORDERER_GENERAL_GENESISFILE=/var/hyperledger/orderer/orderer0.genesis.block
-      - ORDERER_GENERAL_LOCALMSPID=Orderer0MSP
+      - ORDERER_GENERAL_GENESISFILE=/var/hyperledger/orderer/orderer.genesis.block
+      - ORDERER_GENERAL_LOCALMSPID=OrdererMSP
       - ORDERER_GENERAL_LOCALMSPDIR=/var/hyperledger/orderer/msp
       # enabled TLS
       - ORDERER_GENERAL_TLS_ENABLED=true
@@ -25,21 +25,21 @@ services:
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric
     command: orderer
     volumes:
-    - ../channel-artifacts/genesis.block:/var/hyperledger/orderer/orderer0.genesis.block
-    - ../crypto-config/ordererOrganizations/banksco.com/orderers/orderer0.banksco.com/msp:/var/hyperledger/orderer/msp
-    - ../crypto-config/ordererOrganizations/banksco.com/orderers/orderer0.banksco.com/tls/:/var/hyperledger/orderer/tls
+    - ../channel-artifacts/genesis.block:/var/hyperledger/orderer/orderer.genesis.block
+    - ../crypto-config/ordererOrganizations/banksco.com/orderers/ordererTF1.banksco.com/msp:/var/hyperledger/orderer/msp
+    - ../crypto-config/ordererOrganizations/banksco.com/orderers/ordererTF1.banksco.com/tls/:/var/hyperledger/orderer/tls
     ports:
       - 7040:7050
 
-  orderer1.banksco.com:
-    container_name: orderer1.banksco.com
+  ordererMetier.banksco.com:
+    container_name: ordererMetier.banksco.com
     image: hyperledger/fabric-orderer:2.2.0
     environment:
       - FABRIC_LOGGING_SPEC=info
       - ORDERER_GENERAL_LISTENADDRESS=0.0.0.0
       - ORDERER_GENERAL_GENESISMETHOD=file
-      - ORDERER_GENERAL_GENESISFILE=/var/hyperledger/orderer/orderer1.genesis.block
-      - ORDERER_GENERAL_LOCALMSPID=Orderer1MSP
+      - ORDERER_GENERAL_GENESISFILE=/var/hyperledger/orderer/orderer.genesis.block
+      - ORDERER_GENERAL_LOCALMSPID=OrdererMSP
       - ORDERER_GENERAL_LOCALMSPDIR=/var/hyperledger/orderer/msp
       # enabled TLS
       - ORDERER_GENERAL_TLS_ENABLED=true
@@ -49,21 +49,21 @@ services:
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric
     command: orderer
     volumes:
-    - ../channel-artifacts/genesis.block:/var/hyperledger/orderer/orderer1.genesis.block
-    - ../crypto-config/ordererOrganizations/banksco.com/orderers/orderer1.banksco.com/msp:/var/hyperledger/orderer/msp
-    - ../crypto-config/ordererOrganizations/banksco.com/orderers/orderer1.banksco.com/tls/:/var/hyperledger/orderer/tls
+    - ../channel-artifacts/genesis.block:/var/hyperledger/orderer/orderer.genesis.block
+    - ../crypto-config/ordererOrganizations/banksco.com/orderers/ordererMetier.banksco.com/msp:/var/hyperledger/orderer/msp
+    - ../crypto-config/ordererOrganizations/banksco.com/orderers/ordererMetier.banksco.com/tls/:/var/hyperledger/orderer/tls
     ports:
       - 7041:7050
   
-  orderer2.banksco.com:
-    container_name: orderer2.banksco.com
+  ordererJuridique.banksco.com:
+    container_name: ordererJuridique.banksco.com
     image: hyperledger/fabric-orderer:2.2.0
     environment:
       - FABRIC_LOGGING_SPEC=info
       - ORDERER_GENERAL_LISTENADDRESS=0.0.0.0
       - ORDERER_GENERAL_GENESISMETHOD=file
-      - ORDERER_GENERAL_GENESISFILE=/var/hyperledger/orderer/orderer2.genesis.block
-      - ORDERER_GENERAL_LOCALMSPID=Orderer2MSP
+      - ORDERER_GENERAL_GENESISFILE=/var/hyperledger/orderer/orderer.genesis.block
+      - ORDERER_GENERAL_LOCALMSPID=OrdererMSP
       - ORDERER_GENERAL_LOCALMSPDIR=/var/hyperledger/orderer/msp
       # enabled TLS
       - ORDERER_GENERAL_TLS_ENABLED=true
@@ -73,64 +73,64 @@ services:
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric
     command: orderer
     volumes:
-    - ../channel-artifacts/genesis.block:/var/hyperledger/orderer/orderer2.genesis.block
-    - ../crypto-config/ordererOrganizations/banksco.com/orderers/orderer2.banksco.com/msp:/var/hyperledger/orderer/msp
-    - ../crypto-config/ordererOrganizations/banksco.com/orderers/orderer2.banksco.com/tls/:/var/hyperledger/orderer/tls
+    - ../channel-artifacts/genesis.block:/var/hyperledger/orderer/orderer.genesis.block
+    - ../crypto-config/ordererOrganizations/banksco.com/orderers/ordererJuridique.banksco.com/msp:/var/hyperledger/orderer/msp
+    - ../crypto-config/ordererOrganizations/banksco.com/orderers/ordererJuridique.banksco.com/tls/:/var/hyperledger/orderer/tls
     ports:
       - 7042:7050
 
-  peer0.bank1.banksco.com:
-    container_name: peer0.bank1.banksco.com
+  peerTF1.bank1.banksco.com:
+    container_name: peerTF1.bank1.banksco.com
     extends:
       file: peer-base.yaml
       service: peer-base
     environment:
-      - CORE_PEER_ID=peer0.bank1.banksco.com
-      - CORE_PEER_ADDRESS=peer0.bank1.banksco.com:7051
-      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.bank1.banksco.com:7051
+      - CORE_PEER_ID=peerTF1.bank1.banksco.com
+      - CORE_PEER_ADDRESS=peerTF1.bank1.banksco.com:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peerTF1.bank1.banksco.com:7051
       - CORE_PEER_LOCALMSPID=Bank1MSP
     volumes:
         - /var/run/:/host/var/run/
-        - ../crypto-config/peerOrganizations/bank1.banksco.com/peers/peer0.bank1.banksco.com/msp:/etc/hyperledger/fabric/msp
-        - ../crypto-config/peerOrganizations/bank1.banksco.com/peers/peer0.bank1.banksco.com/tls:/etc/hyperledger/fabric/tls
+        - ../crypto-config/peerOrganizations/bank1.banksco.com/peers/peerTF1.bank1.banksco.com/msp:/etc/hyperledger/fabric/msp
+        - ../crypto-config/peerOrganizations/bank1.banksco.com/peers/peerTF1.bank1.banksco.com/tls:/etc/hyperledger/fabric/tls
     ports:
       - 7051:7051
       - 7053:7053
 
-  peer0.bank2.banksco.com:
-    container_name: peer0.bank2.banksco.com
+  peerMetier.bank2.banksco.com:
+    container_name: peerMetier.bank2.banksco.com
     extends:
       file: peer-base.yaml
       service: peer-base
     environment:
-      - CORE_PEER_ID=peer0.bank2.banksco.com
-      - CORE_PEER_ADDRESS=peer0.bank2.banksco.com:7051
-      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.bank2.banksco.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.bank2.banksco.com:7051
+      - CORE_PEER_ID=peerMetier.bank2.banksco.com
+      - CORE_PEER_ADDRESS=peerMetier.bank2.banksco.com:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peerMetier.bank2.banksco.com:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peerMetier.bank2.banksco.com:7051
       - CORE_PEER_LOCALMSPID=Bank2MSP
     volumes:
         - /var/run/:/host/var/run/
-        - ../crypto-config/peerOrganizations/bank2.banksco.com/peers/peer0.bank2.banksco.com/msp:/etc/hyperledger/fabric/msp
-        - ../crypto-config/peerOrganizations/bank2.banksco.com/peers/peer0.bank2.banksco.com/tls:/etc/hyperledger/fabric/tls
+        - ../crypto-config/peerOrganizations/bank2.banksco.com/peers/peerMetier.bank2.banksco.com/msp:/etc/hyperledger/fabric/msp
+        - ../crypto-config/peerOrganizations/bank2.banksco.com/peers/peerMetier.bank2.banksco.com/tls:/etc/hyperledger/fabric/tls
     ports:
       - 8051:7051
       - 8053:7053
 
-  peer0.bank3.banksco.com:
-    container_name: peer0.bank3.banksco.com
+  peerJuridique.bank3.banksco.com:
+    container_name: peerJuridique.bank3.banksco.com
     extends:
       file: peer-base.yaml
       service: peer-base
     environment:
-      - CORE_PEER_ID=peer0.bank3.banksco.com
-      - CORE_PEER_ADDRESS=peer0.bank3.banksco.com:7051
-      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.bank3.banksco.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.bank3.banksco.com:7051
+      - CORE_PEER_ID=peerJuridique.bank3.banksco.com
+      - CORE_PEER_ADDRESS=peerJuridique.bank3.banksco.com:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peerJuridique.bank3.banksco.com:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peerJuridique.bank3.banksco.com:7051
       - CORE_PEER_LOCALMSPID=Bank3MSP
     volumes:
         - /var/run/:/host/var/run/
-        - ../crypto-config/peerOrganizations/bank3.banksco.com/peers/peer0.bank3.banksco.com/msp:/etc/hyperledger/fabric/msp
-        - ../crypto-config/peerOrganizations/bank3.banksco.com/peers/peer0.bank3.banksco.com/tls:/etc/hyperledger/fabric/tls
+        - ../crypto-config/peerOrganizations/bank3.banksco.com/peers/peerJuridique.bank3.banksco.com/msp:/etc/hyperledger/fabric/msp
+        - ../crypto-config/peerOrganizations/bank3.banksco.com/peers/peerJuridique.bank3.banksco.com/tls:/etc/hyperledger/fabric/tls
     ports:
       - 9051:7051
       - 9053:7053
